--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@vercel/analytics": "^1.2.2",
         "@vercel/speed-insights": "^1.0.9",
         "bootstrap": "^5.2.3",
         "emailjs-com": "^3.2.0",
