--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "react-dom": "^18.2.0",
         "react-helmet-async": "^1.0.7",
         "react-icons": "^4.1.0",
+        "react-lazy-with-preload": "^2.2.1",
         "react-lazyload": "^3.2.1",
         "react-router-dom": "^6.6.2",
         "react-scripts": "^5.0.1",
