--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "react-bootstrap": "^2.7.0",
         "react-dom": "^18.2.0",
         "react-helmet-async": "^1.0.7",
+        "react-icon": "^1.0.0",
         "react-icons": "^4.1.0",
         "react-lazy-with-preload": "^2.2.1",
         "react-lazyload": "^3.2.1",
