--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "react-chrome-dino": "^0.1.3",
         "react-chrome-dino-ts": "^0.1.2",
         "react-dom": "^18.2.0",
-        "react-helmet-async": "^1.0.7",
+        "react-helmet-async": "^1`.0.7",
         "react-icons": "^4.12.0",
         "react-icon": "^1.0.0",
         "react-icons": "^4.1.0",
