--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "axios": "^1.7.2",
         "bootstrap": "^5.2.3",
         "emailjs-com": "^3.2.0",
+        "firebase": "^10.5.0",
         "openai": "^4.0.0",
         "react": "^18.2.0",
         "react-bootstrap": "^2.7.0",
