--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@vercel/analytics": "^1.2.2",
         "@vercel/speed-insights": "^1.0.12",
+        "antd": "^5.24.2",
         "axios": "^1.7.2",
         "bootstrap": "^5.2.3",
         "emailjs-com": "^3.2.0",
