--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GENERATE_SOURCEMAP=false
 DISABLE_ESLINT_PLUGIN=true
+BLOB_READ_WRITE_TOKEN="vercel_blob_rw_vuBTDxs1Af4OyipF_7ktfANNunJPJCY1OsqLo4fevvrPM6A"
