--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "web-vitals": "^3.1.1"
     },
     "scripts": {
-        "start": "BLOB_READ_WRITE_TOKEN=vercel_blob_rw_vuBTDxs1Af4OyipF_7ktfANNunJPJCY1OsqLo4fevvrPM6A react-scripts start",
+        "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
