--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "bootstrap": "^5.2.3",
         "emailjs-com": "^3.2.0",
         "firebase": "^9.17.0",
+        "moment": "^2.30.1",
         "openai": "^4.0.0",
         "react": "^18.2.0",
         "react-bootstrap": "^2.7.0",
